--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.9.1
 asgiref==3.5.2
 async-generator==1.10
 attrs==21.4.0
@@ -19,6 +20,7 @@ pycparser==2.21
 pyOpenSSL==22.0.0
 PySocks==1.7.1
 pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
 requests==2.28.0
 selenium==4.2.0
 six==1.16.0
@@ -28,6 +30,8 @@ soupsieve==2.3.2.post1
 sqlparse==0.4.2
 trio==0.21.0
 trio-websocket==0.9.2
+tzdata==2022.1
+tzlocal==4.2
 urllib3==1.26.9
 whitenoise==6.2.0
 wsproto==1.1.0
