--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -9,8 +9,10 @@ cffi==1.15.0
 charset-normalizer==2.0.12
 cryptography==37.0.2
 dj-database-url==0.5.0
-Django==3.0
+Django==3.2
+django-filter==22.1
 django-jsonfield==1.4.1
+djangorestframework==3.13.1
 gunicorn==20.1.0
 h11==0.13.0
 idna==3.3
